add temporary random query

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h3>The live result:</h3>
   <verify-viewer style="width: 80%; height: 70vh" url="https://peculiarventures.github.io/ExamplePDFs/signed/BILLS-106s761enr.pdf"></verify-viewer>
 
-  <script type="module" src="https://verify.ink/webcomponent/index.js"></script>
+  <script type="module" src="https://verify.ink/webcomponent/index.js?q=random"></script>
 
   <h2>Another approach is to import inside your script</h2>
   <pre lang="javascript">
